tests controllers